# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.287 2012/06/05 02:16:40 dirtyepic Exp $

  05 Jun 2012; Ryan Hill <dirtyepic@gentoo.org> flag-o-matic.eclass:
  Update Intel/AMD instruction sets for 4.7.

  05 Jun 2012; Ryan Hill <dirtyepic@gentoo.org> flag-o-matic.eclass:
  Add -mfloat-abi=* to ALLOWED_FLAGS (bug #419615 by Hector Martin).

  04 Jun 2012; Ralph Sennhauser <sera@gentoo.org> java-pkg-2.eclass:
  No longer call java-pkg_ensure-test in java-pkg-2_pkg_setup as this is
  handled by all package managers. #278965

  02 Jun 2012; Zac Medico <zmedico@gentoo.org> common-lisp-common-2.eclass,
  java-ant-2.eclass, common-lisp-common-3.eclass, common-lisp-common.eclass,
  db.eclass, depend.php.eclass, freedict.eclass, gnat.eclass,
  gst-plugins-bad.eclass, gst-plugins-base.eclass, kde4-base.eclass,
  mysql.eclass, mysql-autotools.eclass, mysql-cmake.eclass, nsplugins.eclass,
  php-ext-source-r2.eclass, ruby-ng.eclass, scsh.eclass:
  inherit multilib for get_libdir

  01 Jun 2012; Ralph Sennhauser <sera@gentoo.org> ant-tasks.eclass:
  Don't assinging RDEPEND to DEPEND and vise versa. JRE in DEPEND confuses VM
  switching code.

  30 May 2012; Sergei Trofimovich <slyfox@gentoo.org> darcs.eclass:
  Use 'darcs get --lazy' instead of 'darcs get --partial' (gone in darcs-2.8).

  30 May 2012; Ralph Sennhauser <sera@gentoo.org> ant-tasks.eclass:
  Set prefix for ant-1.8.4

  30 May 2012; Justin Lecher <jlec@gentoo.org> flag-o-matic.eclass:
  Sort ldflags handling functions to logic place

  30 May 2012; Sergei Trofimovich <slyfox@gentoo.org> games.eclass:
  Allow EAPI=4.

  30 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> chromium.eclass:
  Introduce chromium_suid_sandbox_check_kernel_config, deprecate
  chromium_check_kernel_config.

  29 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gnustep-2.eclass,
  gnustep-base.eclass: