@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.287 2012/06/05 02:16:40 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.288 2012/06/05 10:21:35 pacho Exp $
+
+  05 Jun 2012; Pacho Ramos <pacho@gentoo.org> stardict.eclass:
+  Allow more providers for stardict, bug #413093 by tot-to and qt team.
 
   05 Jun 2012; Ryan Hill <dirtyepic@gentoo.org> flag-o-matic.eclass:
   Update Intel/AMD instruction sets for 4.7.
